[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "A coinche server"
license = "MIT"
name = "coinched"
repository = "https://github.com/Gyscos/coinched"
version = "0.1.0"

[[bin]]
doc = false
name = "coinched"

[[bin]]
doc = false
name = "coincher"

[dependencies]
bodyparser = "0.0.6"
clap = "1.5.5"
env_logger = "0.3.2"
eventual = "0.1.5"
hyper = "0.7.2"
iron = "0.2.6"
libcoinche = "0.1.9"
log = "0.3.4"
rand = "0.3.12"
rustc-serialize = "0.3.16"
time = "0.1.34"
url = "0.5.2"
