cargo-features = ["edition"]

[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "A coinche server"
license = "MIT"
name = "coinched"
repository = "https://github.com/Gyscos/coinched"
version = "0.1.0"
edition = '2018'

[[bin]]
doc = false
name = "coinched"

[[bin]]
doc = false
name = "coincher"

[dependencies]
clap = "2.32.0"
libcoinche = {version = "0.3", path="../libcoinche"}
rand = "0.5.5"
warp = "0.1.1"
serde = "1.0.71"
serde_derive = "1.0.71"
log = "0.4.3"
structopt = "0.2.10"
reqwest = "0.8.7"
